refactor: PublicHomeController 경량화 및 웹 예외 처리 구조 개선
  - 컨트롤러 비즈니스 로직을 서비스로 이동 (HomePageResult, MonthlyPageResult DTO)
  - SubscriptionQueryService → SubscriptionSearchService 리네이밍
  - analysis() 내 불필요한 model.addAttribute 풀어쓰기 제거
  - SEO description 생성 로직을 SubscriptionAnalysisResult.getPageDescription()으로 이동
  - YearMonth 객체 직접 전달로 prev/next year/month 풀어쓰기 제거
  - 가이드 slug 검증을 GuideSlug enum으로 추출
  - WebExceptionHandler 도입 (웹 컨트롤러 IllegalArgumentException → /home 리다이렉트)
  - 커스텀 에러 페이지 추가 (404, 500)
  - 테스트 리팩토링에 맞춰 업데이트