@@ -1,11 +1,11 @@
 package com.yunbok.houseping.controller.web;
 
-import com.yunbok.houseping.core.service.subscription.SubscriptionQueryService;
+import com.yunbok.houseping.core.service.subscription.SubscriptionSearchService;
 import com.yunbok.houseping.core.service.subscription.SubscriptionAnalysisService;
 import com.yunbok.houseping.core.service.calendar.PublicCalendarService;
 import com.yunbok.houseping.core.domain.Subscription;
+import com.yunbok.houseping.support.dto.HomePageResult;
 import com.yunbok.houseping.support.dto.SubscriptionAnalysisResult;
-
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -17,12 +17,10 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.ui.Model;
 
 import java.time.LocalDate;
-import java.util.Collections;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.Mockito.*;
 
 @DisplayName("PublicHomeController - 공개 홈페이지 컨트롤러")
@@ -30,7 +28,7 @@ import static org.mockito.Mockito.*;
 class PublicHomeControllerTest {
 
     @Mock
-    private SubscriptionQueryService subscriptionQueryUseCase;
+    private SubscriptionSearchService subscriptionSearchService;
 
     @Mock
     private SubscriptionAnalysisService subscriptionAnalysisUseCase;
@@ -45,7 +43,7 @@ class PublicHomeControllerTest {
 
     @BeforeEach
     void setUp() {
-        controller = new PublicHomeController(subscriptionQueryUseCase, subscriptionAnalysisUseCase, publicCalendarService);
+        controller = new PublicHomeController(subscriptionSearchService, subscriptionAnalysisUseCase, publicCalendarService);
     }
 
     @Nested
@@ -56,12 +54,12 @@ class PublicHomeControllerTest {
         @DisplayName("home/index 뷰 이름을 반환한다")
         void returnsCorrectViewName() {
             // given
-            when(subscriptionQueryUseCase.findActiveAndUpcomingSubscriptions(null))
-                    .thenReturn(Collections.emptyList());
-            when(subscriptionQueryUseCase.filterActiveSubscriptions(any()))
-                    .thenReturn(Collections.emptyList());
-            when(subscriptionQueryUseCase.filterUpcomingSubscriptions(any()))
-                    .thenReturn(Collections.emptyList());
+            when(subscriptionSearchService.getHomeData(null, null))
+                    .thenReturn(HomePageResult.builder()
+                            .activeSubscriptions(List.of())
+                            .upcomingSubscriptions(List.of())
+                            .areas(List.of("서울", "경기"))
+                            .build());
 
             // when
             String viewName = controller.index(null, null, model);
@@ -71,63 +69,40 @@ class PublicHomeControllerTest {
         }
 
         @Test
-        @DisplayName("접수중 청약과 예정 청약을 분류하여 모델에 추가한다")
-        void separatesActiveAndUpcomingSubscriptions() {
+        @DisplayName("서비스 결과를 home으로 모델에 추가한다")
+        void addsHomeDataToModel() {
             // given
-            LocalDate today = LocalDate.now();
-            List<Subscription> subscriptions = List.of(
-                    createSubscription(1L, "접수중 아파트", today.minusDays(1), today.plusDays(5)),
-                    createSubscription(2L, "예정 아파트", today.plusDays(3), today.plusDays(10))
-            );
-            when(subscriptionQueryUseCase.findActiveAndUpcomingSubscriptions(null))
-                    .thenReturn(subscriptions);
-            when(subscriptionQueryUseCase.filterActiveSubscriptions(subscriptions))
-                    .thenReturn(List.of(subscriptions.get(0)));
-            when(subscriptionQueryUseCase.filterUpcomingSubscriptions(subscriptions))
-                    .thenReturn(List.of(subscriptions.get(1)));
+            HomePageResult homeData = HomePageResult.builder()
+                    .activeSubscriptions(List.of())
+                    .upcomingSubscriptions(List.of())
+                    .areas(List.of("서울", "경기"))
+                    .build();
+            when(subscriptionSearchService.getHomeData(null, null)).thenReturn(homeData);
 
             // when
             controller.index(null, null, model);
 
             // then
-            verify(model).addAttribute(eq("activeSubscriptions"), any());
-            verify(model).addAttribute(eq("upcomingSubscriptions"), any());
+            verify(model).addAttribute("home", homeData);
         }
 
         @Test
         @DisplayName("지역 필터가 있으면 해당 지역으로 조회한다")
         void filtersByArea() {
             // given
-            when(subscriptionQueryUseCase.findActiveAndUpcomingSubscriptions("서울"))
-                    .thenReturn(Collections.emptyList());
-            when(subscriptionQueryUseCase.filterActiveSubscriptions(any()))
-                    .thenReturn(Collections.emptyList());
-            when(subscriptionQueryUseCase.filterUpcomingSubscriptions(any()))
-                    .thenReturn(Collections.emptyList());
+            when(subscriptionSearchService.getHomeData("서울", null))
+                    .thenReturn(HomePageResult.builder()
+                            .activeSubscriptions(List.of())
+                            .upcomingSubscriptions(List.of())
+                            .areas(List.of("서울", "경기"))
+                            .selectedArea("서울")
+                            .build());
 
             // when
             controller.index("서울", null, model);
 
             // then
-            verify(subscriptionQueryUseCase).findActiveAndUpcomingSubscriptions("서울");
-        }
-
-        @Test
-        @DisplayName("지역 목록을 모델에 추가한다")
-        void addsAreasToModel() {
-            // given
-            when(subscriptionQueryUseCase.findActiveAndUpcomingSubscriptions(null))
-                    .thenReturn(Collections.emptyList());
-            when(subscriptionQueryUseCase.filterActiveSubscriptions(any()))
-                    .thenReturn(Collections.emptyList());
-            when(subscriptionQueryUseCase.filterUpcomingSubscriptions(any()))
-                    .thenReturn(Collections.emptyList());
-
-            // when
-            controller.index(null, null, model);
-
-            // then
-            verify(model).addAttribute(eq("areas"), any(List.class));
+            verify(subscriptionSearchService).getHomeData("서울", null);
         }
     }
 
@@ -173,35 +148,15 @@ class PublicHomeControllerTest {
         }
 
         @Test
-        @DisplayName("청약을 찾을 수 없으면 홈으로 리다이렉트한다")
-        void redirectsToHomeWhenNotFound() {
+        @DisplayName("청약을 찾을 수 없으면 예외가 발생한다")
+        void throwsExceptionWhenNotFound() {
             // given
             when(subscriptionAnalysisUseCase.analyze(999L))
                     .thenThrow(new IllegalArgumentException("청약 정보를 찾을 수 없습니다"));
 
-            // when
-            String viewName = controller.analysis(999L, model);
-
-            // then
-            assertThat(viewName).isEqualTo("redirect:/home");
-        }
-
-        @Test
-        @DisplayName("상태 라벨을 모델에 추가한다")
-        void addsStatusLabelToModel() {
-            // given
-            Subscription subscription = createSubscription(1L, "테스트 아파트", LocalDate.now().minusDays(1), LocalDate.now().plusDays(5));
-            SubscriptionAnalysisResult analysis = SubscriptionAnalysisResult.builder()
-                    .subscription(subscription)
-                    .prices(List.of())
-                    .build();
-            when(subscriptionAnalysisUseCase.analyze(1L)).thenReturn(analysis);
-
-            // when
-            controller.analysis(1L, model);
-
-            // then
-            verify(model).addAttribute(eq("statusLabel"), any(String.class));
+            // when & then
+            assertThatThrownBy(() -> controller.analysis(999L, model))
+                    .isInstanceOf(IllegalArgumentException.class);
         }
     }
 
